bhushan: chnages kyc address, interest style

--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-interest-amount/final-interest-amount.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-interest-amount/final-interest-amount.component.html
@@ -217,9 +217,13 @@
                             </tbody>
                             <tfoot>
                                 <tr>
-                                    <td>Total Amount</td>
-                                    <td *ngIf="colJoin != null">{{(intrestAmount/colJoin) * dateOfPayment.length | currency : 'INR'}}</td>
-                                    <td *ngIf="colJoin == null">{{(intrestAmount) * dateOfPayment.length | currency : 'INR'}}</td>
+                                    <td><strong>Total Amount</strong></td>
+                                    <td *ngIf="colJoin != null">
+                                        <strong>{{(intrestAmount/colJoin) * dateOfPayment.length | currency : 'INR'}}</strong>
+                                    </td>
+                                    <td *ngIf="colJoin == null">
+                                        <strong>{{(intrestAmount) * dateOfPayment.length | currency : 'INR'}}</strong>
+                                    </td>
                                 </tr>
                             </tfoot>
                         </table>
