--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-address/user-address.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-address/user-address.component.html
@@ -93,7 +93,11 @@
                             <div class="row ">
                                 <div class="kt-margin-r-15" *ngFor="let img of images.identityProof, index as idx">
                                     <div class="img-container">
-                                        <img class="border-rad-15 fetched-image" [src]="img" alt="">
+                                        <img class="border-rad-15 fetched-image" [src]="img" alt=""
+                                            (click)="preview(img, idx)">
+                                        <!-- <img src="../../../../../assets/media/icons/edit.svg" alt=""
+                                            class="kt-pointer edit-icon"
+                                            (click)="editImages(idx, 'identityProof');"> -->
                                         <img src="../../../../../assets/media/icons/cancel.svg" alt=""
                                             class="kt-pointer remove-icon"
                                             (click)="removeImages(idx, 'identityProof');">
@@ -489,7 +493,11 @@
                                                     <div class="col-6" [class.offset-4]="images.residential.length == 1"
                                                         *ngFor="let img of images.residential, index as idx">
                                                         <div class="img-container">
-                                                            <img class="fetched-image" [src]="img" alt="">
+                                                            <img class="fetched-image" [src]="img" alt=""
+                                                                (click)="preview(img, idx)">
+                                                            <!-- <img src="../../../../../assets/media/icons/edit.svg" alt=""
+                                                                class="kt-pointer edit-icon"
+                                                                (click)="editImages(idx, 'residential');"> -->
                                                             <img src="../../../../../assets/media/icons/cancel.svg"
                                                                 alt="" class="kt-pointer remove-icon"
                                                                 (click)="removeImages(idx, 'residential');">
@@ -503,7 +511,11 @@
                                                     <div class="col-6" [class.offset-4]="images.permanent.length == 1"
                                                         *ngFor="let img of images.permanent, index as idx">
                                                         <div class="img-container">
-                                                            <img class="fetched-image" [src]="img" alt="">
+                                                            <img class="fetched-image" [src]="img" alt=""
+                                                                (click)="preview(img, idx)">
+                                                            <!-- <img src="../../../../../assets/media/icons/dit.svg" alt=""
+                                                                class="kt-pointer edit-icon"
+                                                            (click)="editImages(idx, 'permanent');"> -->
                                                             <img src="../../../../../assets/media/icons/cancel.svg"
                                                                 alt="" class="kt-pointer remove-icon"
                                                                 (click)="removeImages(idx, 'permanent');">
