--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/deposit-details/deposit-details-list/deposit-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/deposit-details/deposit-details-list/deposit-details-list.component.html
@@ -158,8 +158,10 @@
                 </ng-container>
                 <ng-container matColumnDef="orderStatus">
                     <mat-header-cell *matHeaderCellDef>Order Status</mat-header-cell>
-                    <mat-cell *matCellDef="let element" [ngClass]="{'text-green' : element?.order?.orderCurrentStatus?.id == 3 || 
-                        element?.order?.orderCurrentStatus?.id == 8 || element?.order?.orderCurrentStatus?.id == 12}">
+                    <mat-cell *matCellDef="let element" [ngClass]="{'text-orange' : element?.order?.orderCurrentStatus?.id == 1 || element?.order?.orderCurrentStatus?.id == 5,
+                    'text-red' : element?.order?.orderCurrentStatus?.id == 9 || element?.order?.orderCurrentStatus?.id == 13,
+                    'text-green' : element?.order?.orderCurrentStatus?.id != 1 || element?.order?.orderCurrentStatus?.id != 5 ||
+                    element?.order?.orderCurrentStatus?.id != 9 || element?.order?.orderCurrentStatus?.id != 13}">
                         {{element?.order?.orderCurrentStatus?.statusName ? (element?.order?.orderCurrentStatus?.statusName | titlecase) : '-'}}
                     </mat-cell>
                 </ng-container>
