--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-details-view/order-details-view.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-details-view/order-details-view.component.html
@@ -20,10 +20,11 @@
                     <tbody>
                         <tr *ngFor="let logs of orderTrackingLogs">
                             <td>{{logs?.ordertracking?.orderUniqueId ? logs?.ordertracking?.orderUniqueId : '-'}}</td>
-                            <td>{{logs?.ordertrackingstatus?.statusName ? logs?.ordertrackingstatus?.statusName : '-'}}</td>
+                            <td>{{logs?.ordertrackingstatus?.statusName ? (logs?.ordertrackingstatus?.statusName | titlecase) : '-'}}
+                            </td>
                             <td>{{logs?.logistic?.name ? logs?.logistic?.name : '-'}}</td>
                             <td>{{logs?.trackingId ? logs?.trackingId : '-'}}</td>
-                            <td>{{logs?.createdAt ? (logs?.createdAt | date:'medium') : '-'}}</td>
+                            <td>{{logs?.createdAt ? (logs?.createdAt | date:'MMM d, y, h:mm a') : '-'}}</td>
                             <td>{{logs?.stausChangedBy?.firstName}} {{logs?.stausChangedBy?.lastName}}</td>
                         </tr>
                     </tbody>
