bhushan: edit packets photo

--- a/gold-admin-frontend/src/app/views/pages/loan-management/packets/upload-packets/upload-packets.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/packets/upload-packets/upload-packets.component.scss
@@ -34,4 +34,14 @@
         font-size: 12px;
         margin   : 15px auto;
     }
+
+    .position-relative {
+        position: relative;
+
+    }
+    .edit-icon {
+        position: absolute;
+        top: 5px;
+        right: 15px;
+    }
 }
