--- a/gold-admin-frontend/src/app/views/pages/user-management/assign-appraiser/add-appraiser/add-appraiser.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/assign-appraiser/add-appraiser/add-appraiser.component.html
@@ -35,8 +35,8 @@
                                 <!-- <kt-select-with-search [options]="customer"></kt-select-with-search> -->
                                 <input class="form-control" formControlName="customerUniqueId" autocomplete="off"
                                     *ngIf="data.action !='add'" readonly>
-                                <ng-select formControlName="customerId" #select [items]="customers"
-                                    bindLabel="customerUniqueId" bindValue="id" *ngIf="data.action =='add'"
+                                <ng-select formControlName="customerId" [items]="customers" bindLabel="customerUniqueId"
+                                    bindValue="id" *ngIf="data.action =='add'"
                                     [class.isError]="controls.customerId.touched && controls.customerId.invalid">
                                     <!-- <ng-template ng-multi-label-tmp>
                                                 <span style="display:block" class="ng-placeholder">Select items</span>
@@ -53,7 +53,7 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <label class="mandatory kt-padding-l-10">Appraiser Name:</label>
+                                <label class="mandatory kt-padding-l-10">Appraiser Name</label>
                             </div>
 
                             <div class="col-8">
