--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-details/loan-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-details/loan-details.component.html
@@ -49,20 +49,9 @@
                 <ng-container matColumnDef="actions">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let loan"> 
-                        <div [ngStyle]="{'display': 'inherit'}">
-                            <div *ngIf="((loan.loanStatusForBM == 'pending' || loan.loanStatusForBM == 'rejected') 
-                            && roles == 'Branch Manager') || (loan.loanStatusForAppraiser == 'pending' 
-                            && roles == 'Appraiser')">
-                                <div class="kt-pointer" (click)="editLoan(loan)" class="kt-pointer" >
-                                    <img src="../../../../../assets/media/icons/action.svg" alt="">
-                                </div>
-                            </div>
-                            <div *ngIf="loan.loanStatusForBM == 'approved' && roles == 'Appraiser'">
-                                <div class="kt-pointer" (click)="packageImageUpload(loan)" class="kt-pointer" >
-                                    <img src="../../../../../assets/media/icons/action.svg" alt="">
-                                </div>
-                            </div>
-                            
+                        <div [ngStyle]="{'display': 'inherit'}" class="kt-pointer">
+                          <span (click)="new(loan)">New Loan &nbsp; | &nbsp;</span>                            
+                          <span (click)="viewLoan(loan)">View Loan </span>                          
                         </div>
                     </mat-cell>
                 </ng-container>
