--- a/gold-admin-frontend/src/app/views/pages/user-management/partner/partner-list/partner-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/partner/partner-list/partner-list.component.html
@@ -28,8 +28,8 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let parnter">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div class="kt-pointer" (click)="viewSchemes(parnter.id)"> View Schemes | &nbsp;</div>
-                            <div (click)="editRole(parnter)" class="kt-pointer"> Edit | &nbsp;</div>
+                            <div class="kt-pointer" (click)="viewSchemes(parnter.id)"> View Schemes  &nbsp;| &nbsp;</div>
+                            <div (click)="editRole(parnter)" class="kt-pointer"> Edit  &nbsp;| &nbsp;</div>
                             <div class="kt-pointer text-danger" (click)="deleteRole(parnter)">Delete</div>
                         </div>
                     </mat-cell>
