--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-details-edit/order-details-edit.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-details-edit/order-details-edit.component.html
@@ -65,7 +65,8 @@
                             <label class="font-weight-500 text-color">EMI Start Date</label>
                         </div>
                         <div class="col-8">
-                            <input type="text" formControlName="emiStartDate" class="form-control" disabled>
+                            <input type="text" class="form-control" formControlName="emiStartDate"
+                                [value]="controls?.emiStartDate?.value | date: 'MMM d, y, h:mm a'" disabled>
                         </div>
                     </div>
                     <div class="row kt-margin-t-15">
@@ -73,7 +74,8 @@
                             <label class="font-weight-500 text-color">EMI End Date</label>
                         </div>
                         <div class="col-8">
-                            <input type="text" formControlName="emiEndDate" class="form-control" disabled>
+                            <input type="text" class="form-control" formControlName="emiEndDate"
+                                [value]="controls?.emiEndDate?.value | date: 'MMM d, y, h:mm a'" disabled>
                         </div>
                     </div>
                     <div class="row kt-margin-t-15" *ngIf="showUploadFile">
