bhushan: kyc occupation, bug fixing

--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-address/user-address.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-address/user-address.component.html
@@ -61,10 +61,10 @@
                             </div>
                             <div class="col-7">
                                 <div class="input-group mb-3">
-                                    <input type="text" class="form-control" formControlName="identityProof"
+                                    <input type="text" class="form-control" formControlName="identityProofFileName"
                                         placeholder="image.jpg" aria-label="Image" aria-describedby="basic-addon2"
                                         readonly
-                                        [class.isError]="controls.identityProof.invalid && controls.identityProof.touched">
+                                        [class.isError]="controls.identityProofFileName.invalid && controls.identityProofFileName.touched">
                                     <div class="input-group-append">
                                         <span class="input-group-text bg kt-pointer font-weight" id="basic-addon2"
                                             (click)="identity.click()"
@@ -411,7 +411,7 @@
                                                     <input type="text" class="form-control" placeholder="Select"
                                                         aria-label="Recipient's username"
                                                         aria-describedby="basic-addon2" readonly
-                                                        formControlName="addressProof">
+                                                        formControlName="addressProofFileName">
                                                     <div class="input-group-append">
                                                         <span class="input-group-text bg kt-pointer font-weight"
                                                             id="basic-addon2" (click)="permanent.click()"
@@ -431,7 +431,7 @@
                                                     <input type="text" class="form-control" placeholder="Select"
                                                         aria-label="Recipient's username"
                                                         aria-describedby="basic-addon2" readonly
-                                                        formControlName="addressProof">
+                                                        formControlName="addressProofFileName">
                                                     <div class="input-group-append">
                                                         <span class="input-group-text bg kt-pointer font-weight"
                                                             id="basic-addon2" (click)="residential.click()"
