--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -469,9 +469,14 @@ mat-header-row {
 	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%230000008c' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
 }
 
+.input-group .form-control {
+	border-top-right-radius: 0 !important;
+	border-bottom-right-radius: 0 !important;
+}
+
 .input-group-text {
 	//   border-radius: 9px !important;
-	margin-left: -10px;
+	// margin-left: -10px;
 	z-index: 2;
 	border-top-right-radius: 9px !important;
 	border-bottom-right-radius: 9px !important;
