--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-banks/user-banks.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-banks/user-banks.component.html
@@ -126,8 +126,8 @@
                                         <div class="input-group mb-3">
                                             <input type="text" class="form-control" placeholder="Select File"
                                                 aria-label="Recipient's username" aria-describedby="basic-addon2"
-                                                readonly formControlName="passbookProof"
-                                                [class.isError]="controls.passbookProof.touched && controls.passbookProof.invalid" />
+                                                readonly formControlName="passbookProofImage"
+                                                [class.isError]="controls.passbookProofImage.touched && controls.passbookProofImage.invalid" />
                                             <div class="input-group-append">
                                                 <span class="input-group-text bg kt-pointer font-weight"
                                                     id="basic-addon2" (click)="signature.click()">Attach</span>
