--- a/gold-admin-frontend/src/app/views/pages/customer-management/customer-list/customer-list.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/customer-management/customer-list/customer-list.component.scss
@@ -2,6 +2,9 @@
     .mat-column-actions {
         flex: 0 0 300px;
     }
+    .mat-column-fullName {
+        padding-left: 10px !important;
+    }
 
     .mat-table__wrapper .mat-table .mat-header-cell {
         padding-right: 0%;
