--- a/gold-admin-frontend/src/app/views/pages/customer-management/customer-list/customer-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/customer-management/customer-list/customer-list.component.html
@@ -1,46 +1,46 @@
 <kt-portlet>
     <kt-portlet-body>
         <div class="mat-table__wrapper">
-            <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" >
+            <mat-table class="lmat-elevation-z8" #table [dataSource]="customerResult" >
 
                 <ng-container matColumnDef="fullName">
                     <mat-header-cell *matHeaderCellDef >Customer Name</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.fullName}}</mat-cell>
+                    <mat-cell *matCellDef="let customer">{{customer.firstName | titlecase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="customerId">
                     <mat-header-cell *matHeaderCellDef >Customer Id</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.customerId | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let customer">{{customer.customerUniqueId | titlecase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="mobile">
                     <mat-header-cell *matHeaderCellDef >Mobile Number</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.mobile}}</mat-cell>
+                    <mat-cell *matCellDef="let customer">{{customer.mobileNumber}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="pan">
                     <mat-header-cell *matHeaderCellDef >PAN Number</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.pan | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let customer">{{customer.panCardNumber | uppercase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="state">
                     <mat-header-cell *matHeaderCellDef >State</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.state | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let customer">{{customer.state.name | titlecase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="city">
                     <mat-header-cell *matHeaderCellDef >City</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.city | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let customer">{{customer.city.name | titlecase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="actions">
                     <mat-header-cell [ngClass]="'w-200'" *matHeaderCellDef >Action</mat-header-cell>
-                    <mat-cell *matCellDef="let role" [ngClass]="'w-200'">
+                    <mat-cell *matCellDef="let customer" [ngClass]="'w-200'">
                         <p>
-                            <span class="kt-pointer" >Add New Loan</span>&nbsp;|&nbsp;
-                            <span class="kt-pointer" (click)="viewLoan(role.id)">View Loan</span>&nbsp;|&nbsp;
-                            <span class="kt-pointer" (click)="editCustomer(role)">Edit</span>&nbsp;|&nbsp;
-                            <span class="text-danger kt-pointer" (click)="deleteCustomer(role)">Delete</span>
+                            <span class="kt-pointer" (click)="newLoan(customer)">Add New Loan</span>&nbsp;|&nbsp;
+                            <span class="kt-pointer" (click)="viewDetails(customer.id)">View Details</span>&nbsp;|&nbsp;
+                            <span class="kt-pointer" (click)="editCustomer(customer)">Edit</span>&nbsp;|&nbsp;
+                            <span class="text-danger kt-pointer" (click)="deleteCustomer(customer)">Delete</span>
                         </p>
                     </mat-cell>
                 </ng-container>
@@ -50,16 +50,16 @@
                 <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
             </mat-table>
 
-            <div class="mat-table__message" *ngIf="!dataSource.hasItems">No records found</div>
+            <div class="mat-table__message" *ngIf="!hasItems">No records found</div>
             <!-- Message for empty data  -->
-            <div class="mat-table__message" *ngIf="dataSource.isPreloadTextViewed$ | async">Please wait....</div>
+            <div class="mat-table__message" *ngIf="isPreloadTextViewed">Please wait....</div>
         </div>
 
         <!-- start: BOTTOM -->
         <div class="mat-table__bottom">
             <mat-spinner [diameter]="20" *ngIf="dataSource.loading$ | async"></mat-spinner>
             
-            <mat-paginator [pageSize]="25" [pageSizeOptions]="[10,25,50,100]" [length]="dataSource.paginatorTotal$ | async"
+            <mat-paginator [pageSize]="20" [pageSizeOptions]="[10,20,60,100]" [length]="paginatorTotal"
                 [showFirstLastButtons]="true"></mat-paginator>
         </div>
     </kt-portlet-body>
