--- a/gold-admin-frontend/src/app/views/pages/emi-management/reports/reports.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/reports/reports.component.html
@@ -1,81 +1,107 @@
 <kt-toastr #toastr></kt-toastr>
 <kt-portlet>
-    <kt-portlet-body>
-        <div class="row justify-content-center scroll kt-padding-t-10 kt-padding-b-10">
-            <div class="col-6">
-                <form [formGroup]="orderForm">
-                    <!-- <div class="row kt-margin-t-15">
+    <kt-portlet-body [class]="'kt-portlet__body--fit d-flex align-items-center justify-content-center'">
+        <div class="row row-no-padding row-col-separator-xl">
+            <div class="col-12">
+                <form [formGroup]="reportForm">
+                    <div class="row kt-margin-t-15">
                         <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Member Id</label>
+                            <label class="font-weight-500 text-color">Select Report</label>
                         </div>
                         <div class="col-8">
-                            <input type="text" formControlName="memberId" class="form-control" numbersOnly disabled>
+                            <select class="form-control" formControlName="reportType"
+                                [class.isError]="controls.reportType.touched && controls.reportType.invalid">
+                                <option value="" [selected]="true" [disabled]="true">Select Report</option>
+                                <option [value]="item.id" *ngFor="let item of reportTypes">
+                                    {{item.name | titlecase}}</option>
+                            </select>
+                            <div *ngIf="controls.reportType.touched && controls.reportType.invalid">
+                                <mat-error *ngIf="controls.reportType.touched && controls.reportType.errors?.required">
+                                    Field is required</mat-error>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row kt-margin-t-15" *ngIf="controls?.reportType?.value == '1' || 
+                    controls?.reportType?.value == '2' ||  controls?.reportType?.value == '3' || 
+                    controls?.reportType?.value == '4' || controls?.reportType?.value == '5'">
+                        <div class="col-4 align-self-center">
+                            <label class="font-weight-500 text-color" *ngIf="controls?.reportType?.value == '1'">User
+                                From</label>
+                            <label class="font-weight-500 text-color" *ngIf="controls?.reportType?.value == '2'">Deposit
+                                Funds Origin</label>
+                            <label class="font-weight-500 text-color" *ngIf="controls?.reportType?.value == '3'">EMI
+                                From</label>
+                            <label class="font-weight-500 text-color" *ngIf="controls?.reportType?.value == '4'">Order
+                                From</label>
+                            <label class="font-weight-500 text-color" *ngIf="controls?.reportType?.value == '5'">Cancel
+                                Order From</label>
+                        </div>
+                        <div class="col-8">
+                            <select class="form-control" formControlName="merchantId"
+                                [class.isError]="controls.merchantId.touched && controls.merchantId.invalid">
+                                <option value="" [selected]="true" [disabled]="true">Select Report</option>
+                                <option [value]="item.id" *ngFor="let item of reportTypes">
+                                    {{item.name | titlecase}}</option>
+                            </select>
+                            <div *ngIf="controls.merchantId.touched && controls.merchantId.invalid">
+                                <mat-error *ngIf="controls.merchantId.touched && controls.merchantId.errors?.required">
+                                    Field is required</mat-error>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row kt-margin-t-15" *ngIf="controls?.reportType?.value != '7'">
+                        <div class="col-4 align-self-center">
+                            <label class="font-weight-500 text-color">From Date</label>
+                        </div>
+                        <div class="col-8">
+                            <input type="text" class="form-control" [matDatepicker]="pickerStartDate"
+                                (click)="pickerStartDate.open()" formControlName="startDate"
+                                [class.isError]="controls.startDate.touched && controls.startDate.invalid" readonly
+                                placeholder="4/5/2020" [max]="minDate">
+                            <mat-datepicker #pickerStartDate></mat-datepicker>
+                            <mat-error *ngIf="controls.startDate.errors?.required && controls.startDate.touched">
+                                Field is required
+                            </mat-error>
+                        </div>
+                    </div>
+                    <div class="row kt-margin-t-15" *ngIf="controls?.reportType?.value != '7'">
+                        <div class="col-4 align-self-center">
+                            <label class="font-weight-500 text-color">To Date</label>
+                        </div>
+                        <div class="col-8">
+                            <input type="text" class="form-control" [matDatepicker]="pickerEndDate"
+                                (click)="pickerEndDate.open()" formControlName="endDate"
+                                [class.isError]="controls.endDate.touched && controls.endDate.invalid" readonly
+                                placeholder="4/5/2020" [max]="minDate">
+                            <mat-datepicker #pickerEndDate></mat-datepicker>
+                            <mat-error *ngIf="controls.endDate.errors?.required && controls.endDate.touched">
+                                Field is required
+                            </mat-error>
+                        </div>
+                    </div>
+                    <div class="row kt-margin-t-15" *ngIf="controls?.reportType?.value == '4'">
+                        <div class="col-4 align-self-center">
+                            <label class="font-weight-500 text-color">Status</label>
+                        </div>
+                        <div class="col-8">
+                            <select class="form-control" formControlName="statusId"
+                                [class.isError]="controls.statusId.touched && controls.statusId.invalid">
+                                <option value="" [selected]="true" [disabled]="true">Select Status</option>
+                                <option [value]="item.id" *ngFor="let item of reportTypes">
+                                    {{item.name | titlecase}}</option>
+                            </select>
+                            <div *ngIf="controls.statusId.touched && controls.statusId.invalid">
+                                <mat-error *ngIf="controls.statusId.touched && controls.statusId.errors?.required">
+                                    Field is required</mat-error>
+                            </div>
                         </div>
                     </div>
                     <div class="row kt-margin-t-15">
-                        <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Order Id</label>
-                        </div>
-                        <div class="col-8">
-                            <input type="text" formControlName="orderId" class="form-control" disabled>
+                        <div class="col-12 text-right">
+                            <kt-button [value]="'Generate Report'" [type]="'submit'" (click)="submit()"></kt-button>
                         </div>
                     </div>
-                    <div class="row kt-margin-t-15">
-                        <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Order Total Amount</label>
-                        </div>
-                        <div class="col-8">
-                            <input type="text" formControlName="orderTotalAmount" class="form-control" disabled>
-                        </div>
-                    </div>
-                    <div class="row kt-margin-t-15">
-                        <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Order Initial Amount</label>
-                        </div>
-                        <div class="col-8">
-                            <input type="text" formControlName="orderInitialAmount" class="form-control" disabled>
-                        </div>
-                    </div>
-                    <div class="row kt-margin-t-15">
-                        <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">EMI Tenure</label>
-                        </div>
-                        <div class="col-8">
-                            <input type="text" formControlName="emiTenure" class="form-control" disabled>
-                        </div>
-                    </div>
-                    <div class="row kt-margin-t-15">
-                        <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Product Name</label>
-                        </div>
-                        <div class="col-8">
-                            <input type="text" formControlName="productName" class="form-control" disabled>
-                        </div>
-                    </div>
-                    <div class="row kt-margin-t-15">
-                        <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">SKU</label>
-                        </div>
-                        <div class="col-8">
-                            <input type="text" formControlName="sku" class="form-control" disabled>
-                        </div>
-                    </div>
-                    <div class="row kt-margin-t-15">
-                        <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">EMI Start Date</label>
-                        </div>
-                        <div class="col-8">
-                            <input type="text" formControlName="emiStartDate" class="form-control" disabled>
-                        </div>
-                    </div>
-                    <div class="row kt-margin-t-15">
-                        <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">EMI End Date</label>
-                        </div>
-                        <div class="col-8">
-                            <input type="text" formControlName="emiEndDate" class="form-control" disabled>
-                        </div>
-                    </div> -->
                 </form>
             </div>
         </div>
