Done for the day

--- a/gold-admin-frontend/src/app/views/pages/customer-management/customer-details/customer-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/customer-management/customer-details/customer-details.component.html
@@ -84,10 +84,10 @@
                     <div class="text-color font-weight-500">123456789</div>
                 </div>
                 <div class="col-2 kt-padding-t-25">
-                    <span class="document">
+                    <span class="document kt-margin-r-10">
                         <img src="../../../../../assets/media/icons/image-placeholder.png" class=" kt-pointer">
                     </span>
-                    <span class="document">
+                    <span class="document ">
                         <img src="../../../../../assets/media/icons/image-placeholder.png" class=" kt-pointer">
                     </span>
                     <div class="text-color font-weight-500">123456789</div>
