--- a/gold-admin-frontend/src/app/views/pages/customer-management/customer-details/customer-details.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/customer-management/customer-details/customer-details.component.scss
@@ -16,7 +16,7 @@
 		height: 40px;
 		background-color: #f0f8fc;
         border-radius: 10px;
-        display: flex;
+        display: inline-flex;
         justify-content: center;
         align-items: center;
 		img {
