--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-details/loan-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-details/loan-details.component.html
@@ -55,12 +55,19 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="actions">
-                    <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef></mat-header-cell>
                     <mat-cell *matCellDef="let loan"> 
-                        <div [ngStyle]="{'display': 'inherit'}" class="kt-pointer">
-                          <span (click)="new(loan)">New Loan &nbsp; | &nbsp;</span>                            
-                          <span (click)="viewLoan(loan)">View Loan </span>                          
-                        </div>
+                        <!-- <div style="display: contents" class="kt-pointer" > -->
+                            <span (click)="viewLoan(loan)" class=" font-weight-bold">View Loan </span> 
+                        <!-- </div> -->
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="new">
+                    <mat-header-cell *matHeaderCellDef></mat-header-cell>
+                    <mat-cell *matCellDef="let loan"> 
+                        <!-- <div style="display: contents" class="kt-pointer" > -->
+                            <button (click)="new(loan)" class="addmore">Add New Loan</button>                                                        
+                        <!-- </div> -->
                     </mat-cell>
                 </ng-container>
 
