--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-details/loan-details.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-details/loan-details.component.scss
@@ -27,4 +27,13 @@
     .mat-column-endDate  {
         flex: 0 0 8% !important;
     }
+    .mat-column-actions  {
+        flex: 0 0 8% !important;
+    }
+    .addmore {
+		background: transparent;
+		border: thin solid #454D67;
+		border-radius: 5px;
+		padding: 5px;
+	}
 }
