--- a/gold-admin-frontend/src/app/views/pages/user-management/broker/add-broker/add-broker.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/broker/add-broker/add-broker.component.html
@@ -223,7 +223,7 @@
                             </div>
                             <div class="col-8">
                                 <div class="input-group mb-3">
-                                    <input type="text" class="form-control" formControlName="imgName"
+                                    <input type="text" class="form-control" formControlName="imgName" readonly
                                         placeholder="image.jpg" aria-label="Image" aria-describedby="basic-addon2">
                                     <div class="input-group-append">
                                         <span class="input-group-text bg kt-pointer font-weight" id="basic-addon2"
