--- a/gold-admin-frontend/src/app/views/pages/user-management/store/store-list/store-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/store/store-list/store-list.component.html
@@ -5,23 +5,23 @@
 		<!-- See off.documentations 'https://material.angular.io/components/table/overview' -->
 		<div class="mat-table__wrapper">
 			<mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource">
-	
+
 
 				<ng-container matColumnDef="storeId">
-					<mat-header-cell *matHeaderCellDef >store Name</mat-header-cell>
+					<mat-header-cell *matHeaderCellDef>Store ID</mat-header-cell>
 					<mat-cell *matCellDef="let store">
-							{{store.storeUniqueId | titlecase}}
+						{{store.storeUniqueId | titlecase}}
 					</mat-cell>
 				</ng-container>
-                <ng-container matColumnDef="merchantName">
-					<mat-header-cell *matHeaderCellDef >store Name</mat-header-cell>
+				<ng-container matColumnDef="merchantName">
+					<mat-header-cell *matHeaderCellDef>Merchant Name</mat-header-cell>
 					<mat-cell *matCellDef="let store">
-							{{store.merchant.merchantName | titlecase}}
+						{{store.merchant.merchantName | titlecase}}
 					</mat-cell>
 				</ng-container>
-	
 
-				<ng-container matColumnDef="action">
+
+				<!-- <ng-container matColumnDef="action">
 					<mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
 					<mat-cell *matCellDef="let store">
 						<div [ngStyle]="{'display': 'inherit'}">
@@ -31,7 +31,7 @@
 							<div class="kt-pointer text-danger " (click)="deletestore(store.id)">Delete</div>
 						</div>
 					</mat-cell>
-				</ng-container>
+				</ng-container> -->
 
 				<mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
 
@@ -49,8 +49,8 @@
 			<mat-spinner [diameter]="20" *ngIf="dataSource.loading$ | async"></mat-spinner>
 			<!-- MATERIAL PAGINATOR | Binded to dasources -->
 			<!-- See off.documentations 'https://material.angular.io/components/paginator/overview' -->
-			<mat-paginator [pageSize]="25" [pageSizeOptions]="[10,25,50,100]" [length]="dataSource.paginatorTotal$ | async"
-				[showFirstLastButtons]="true"></mat-paginator>
+			<mat-paginator [pageSize]="25" [pageSizeOptions]="[10,25,50,100]"
+				[length]="dataSource.paginatorTotal$ | async" [showFirstLastButtons]="true"></mat-paginator>
 		</div>
 		<!-- end: BOTTOM -->
 	</kt-portlet-body>
