--- a/gold-admin-frontend/src/app/views/pages/user-management/broker/broker-list/broker-list.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/user-management/broker/broker-list/broker-list.component.scss
@@ -11,6 +11,7 @@
     }
     .mat-column-email{
         flex: 0 0 15% !important;
+        word-break: break-all;
     }
     .mat-column-mobileNumber{
         flex: 0 0 7% !important;
