--- a/gold-admin-frontend/src/app/views/pages/user-management/merchant/merchant-list/merchant-list.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/user-management/merchant/merchant-list/merchant-list.component.scss
@@ -1,8 +1,8 @@
 :host{
-    .mat-table__wrapper {
-        width: 100%;
-        overflow-x: hidden;
-    }
+    // .mat-table__wrapper {
+    //     width: 100%;
+    //     overflow-x: hidden;
+    // }
     .mat-column-merchantName{
         flex: 0 0 13% !important;
         padding-left: 10px !important;
@@ -30,7 +30,7 @@
         flex: 0 0 6% !important;
     }
     .mat-column-apiKey{
-        flex: 0 0 5% !important;
+        flex: 0 0 6% !important;
     }
     .mat-column-action{
         flex: 0 0 8% !important;
